# env-mcp-demo

./: README.md  env_start.sh  metadata.json  pyproject.toml
calculator_server/: pyproject.toml
calculator_server/src/: main.py
calculator_server/src/calculator_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hello_world_server/src/: main.py
hello_world_server/src/hello_world_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
http_mcp_demo/: setup.sh
stdio_mcp_demo/: mcp_config.json
