[project]
name = "env-mcp-demo"
version = "0.1.0"
description = "Dynamic MCP Server Demo with Hello World and Calculator"
readme = "README.md"
requires-python = ">=3.12"
# Note: This file is for metadata only, not for building a package
# Individual server packages are built separately in their own directories
dependencies = [
    "mcp>=1.0.0",
    "fastmcp~=2.11.3",
    "pydantic>=2.0.0",
    "fastapi[standard]>=0.100.0",
]

[tool.setuptools]
# Explicitly disable package discovery to avoid build errors
# Root directory contains multiple independent packages
packages = []

