[project]
name = "calculator-server"
version = "0.1.0"
description = "Calculator MCP Server with basic arithmetic operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp~=2.11.3",
    "pydantic>=2.0.0",
    "fastapi[standard]>=0.100.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

